examples/kju/negative/if.kju
fun f(a: Int): Int
{
	if (a)
	then
	{
		a=1;
	}
	else
	{
		a=2;
	};
}
fun kju(): Unit
{
	var a: Int;
	a=f(2);
}
